Bug 325413 - Window and tab icon can go out of sync
Summary: Window and tab icon can go out of sync
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.2
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-29 07:33 UTC by Eike Hein
Modified: 2015-01-25 00:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2013-09-29 07:33:49 UTC
When using "Monitor for Silence/Activity" and either condition is detected, Konsole changes the tab's icon to an "i" icon. Konsole also changes the window icon to the tab icon on tab switch - but only on tab switch. If silence/activity is being monitored for and detected in the current tab, only the tab icon will change but not the window icon. Similarly, when clicking the terminal area to dismiss the "i" icon, only the tab icon will change, but not the window icon if it's currently the "i" icon due to a previous tab switch.

Reproducible: Always



Expected Results:  
Tab and window icon stay in sync.
Comment 1 Kurt Hindenburg 2015-01-25 00:25:56 UTC
Git commit 571ffb4fb3b837d655b22dc97b516dad48a15c79 by Kurt Hindenburg.
Committed on 25/01/2015 at 00:03.
Pushed by hindenburg into branch 'master'.

When visible session icon changes, change program icon

Sync window program icon with the visible session icon.  Noticeable
when using "Send to all" or "Monitor For"
REVIEW: 121399

M  +3    -0    src/MainWindow.cpp

http://commits.kde.org/konsole/571ffb4fb3b837d655b22dc97b516dad48a15c79