When visible session icon changes, change program icon

Sync window program icon with the visible session icon.  Noticeable
when using "Send to all" or "Monitor For"

BUG: 325413
REVIEW: 121399